src/objects/MUSW__Complaint_Parcel__c.object
<CustomObject>
    <description>Parcels associated to a Complaint</description>
    <fields>
        <fullName>MUSW__Complaint2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Complaint2_Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint__c</referenceTo>
        <relationshipName>Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Complaints as Property</relationshipLabel>
        <relationshipName>Parcel_Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Complaint Parcel</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>